--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
   flutter_svg: ^2.0.10+1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
