--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get: ^4.6.6
   flutter_svg: ^2.0.10+1
   smooth_page_indicator: ^1.1.0
+  image_picker: ^1.1.2
+  http: ^1.2.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
