--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   image_picker: ^1.1.2
   http: ^1.2.2
   shared_preferences: ^2.2.3
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.3.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
