--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.3.1
   intl: ^0.19.0
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
