--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.3.1
   intl: ^0.19.0
   awesome_snackbar_content: ^0.1.3
+  back_button_interceptor: ^7.0.3
 
 
 dev_dependencies:
