--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   intl: ^0.19.0
   awesome_snackbar_content: ^0.1.3
   back_button_interceptor: ^7.0.3
+  speech_to_text: ^6.6.2
 
 
 dev_dependencies:
